# energy-forecasting

./: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
deploy/: index.html  monitoring.html  monitoring.js  script.js  styles.css  translations.json
dev-notes/: daily_forecast_external_trigger_plan.md  master_plan.md  roadmap.md  stage10_ai_narrative_forecast_story.md  stage10b_forecast_story_rework.md  stage1_foundation.md  stage4_feature_engineering.md  stage5_model_training.md  stage5c_results_2026-05-29.md  stage5c_status_2026-06-06.md  stage6_inference_api.md  stage9_story_site.md
docs/: forecast_fix.md  forecast_fix_comments.md  forecast_fix_retrain_implementation_log.md  forecast_fix_retrain_plan.md  master_plan.md  mlflow_conventions.md  roadmap.md  source_repo_guide.md  stage10_ai_narrative_forecast_story.md  stage1_foundation.md  stage2_data_collection.md  stage3_data_cleaning.md  stage5_model_training.md  stage5c_review_2026-05-27.md  stage5c_status_2026-06-06.md  stage6_inference_api.md  stage7_dashboard.md
energy_forecasting/: __init__.py  cli.py  mlflow_utils.py
models/: ensemble_config.json  gen_load_config.json  price_feature_cols.json
scripts/: audit_search_space.py  build_forecast_story_data.py  build_story_data.py  chain_price_retrain.sh  ensemble_method_comparison.py  forecast_fix_archive_price_runs.py  forecast_fix_coverage_tools.py  forecast_fix_dataset_audit.py  forecast_fix_price_validation.py  gen_hindcast.py  groq_spike.py  investigate_diversity.py  investigate_huber.py  investigate_lgbm.py  investigate_lgbm2.py  (+3 more)
(+166 files in other folders)
